fix: draggable button blocking container scroll
In this commit, I added buttons to scroll the element list container left and right to fix the issue on mobile devices. On desktop, the default scrollbar is used instead.

--- a/css/main.css
+++ b/css/main.css
@@ -248,4 +248,8 @@ body:has(#canvas-wrapper:empty) #download-as-text {
     left: 50%;
     transform: translateX(-50%);
   }
+
+  #canvas-element-list {
+    overflow: hidden !important;
+  }
 }
